fix & feat: Testing with Improved Coverage & Common Utility for Struct Validations
